syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.tingshulien.grpc.streaming.server.model";

message WithdrawRequest {
  int32 account_number = 1;
  int32 amount = 2;
}

message Money {
  int32 amount = 1;
}

service BankService {
  rpc Withdraw(WithdrawRequest) returns (stream Money);
}